RESOLVED FIXED224016
REGRESSION (Metal ANGLE): [Catalina] 6 consistent WebGL failures / timeouts
https://bugs.webkit.org/show_bug.cgi?id=224016
Summary REGRESSION (Metal ANGLE): [Catalina] 6 consistent WebGL failures / timeouts
Ryan Haddad
Reported 2021-03-31 14:10:48 PDT
The following WebGL tests have been consistently timing out or failing on Catalina bots since Metal backed ANGLE Failing: webgl/2.0.0/conformance2/buffers/one-large-uniform-buffer.html +[ 4: FAIL ] canvas should be same as input uniform at (0, 0) expected: 127,191,64,255 was 0,0,0,0 webgl/2.0.0/conformance2/buffers/uniform-buffers.html +[ 19: FAIL ] draw call should set canvas to red at (0, 0) expected: 255,0,0,255 was 255,255,255,255 +[ 20: FAIL ] draw call should set canvas to blue at (0, 0) expected: 0,0,255,255 was 255,255,255,255 +[ 25: FAIL ] draw call should set canvas to red at (0, 0) expected: 255,0,0,255 was 0,0,0,255 +[ 26: FAIL ] draw call should set canvas to blue at (0, 0) expected: 0,0,255,255 was 0,0,0,255 +[ 33: FAIL ] draw call should set canvas to (0.5, 0, 0.5) at (0, 0) expected: 127,0,127,255 was 0,0,0,255 +[ 34: FAIL ] draw call should set canvas to (0, 0.5, 1) at (0, 0) expected: 0,127,255,255 was 0,0,0,255 Timing out webgl/1.0.3/conformance/ogles/GL/all/all_001_to_004.html webgl/1.0.3/conformance/ogles/GL/any/any_001_to_004.html webgl/2.0.0/conformance/ogles/GL/all/all_001_to_004.html webgl/2.0.0/conformance/ogles/GL/any/any_001_to_004.html https://build.webkit.org/results/Apple-Catalina-Release-WK2-Tests/r275299%20(1431)/results.html https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=webgl%2F1.0.3%2Fconformance%2Fogles%2FGL%2Fall%2Fall_001_to_004.html&test=webgl%2F1.0.3%2Fconformance%2Fogles%2FGL%2Fany%2Fany_001_to_004.html&test=webgl%2F2.0.0%2Fconformance%2Fogles%2FGL%2Fall%2Fall_001_to_004.html&test=webgl%2F2.0.0%2Fconformance%2Fogles%2FGL%2Fany%2Fany_001_to_004.html&test=webgl%2F2.0.0%2Fconformance2%2Fbuffers%2Fone-large-uniform-buffer.html&test=webgl%2F2.0.0%2Fconformance2%2Fbuffers%2Funiform-buffers.html
Attachments
Patch (14.57 KB, patch)
2021-04-12 14:18 PDT, Dean Jackson
no flags
Radar WebKit Bug Importer
Comment 1 2021-03-31 14:11:12 PDT
Ryan Haddad
Comment 2 2021-03-31 17:12:53 PDT
Marked tests as failing/skipped in https://trac.webkit.org/changeset/275321/webkit
Dean Jackson
Comment 3 2021-04-12 14:18:02 PDT
EWS Watchlist
Comment 4 2021-04-12 14:19:01 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
EWS
Comment 5 2021-04-12 15:41:40 PDT
Committed r275841 (236409@main): <https://commits.webkit.org/236409@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425791 [details].
Note You need to log in before you can comment on or make changes to this bug.