REGRESSION (Metal ANGLE): [Catalina] 6 consistent WebGL failures / timeouts https://bugs.webkit.org/show_bug.cgi?id=224016 <rdar://problem/76070325>

Patch by John Cunningham <johncunnigham@apple.com>
Patch by Dean Jackson <dino@apple.com> on 2021-04-12
Reviewed by Dean Jackson.

Implement a workaround for Intel GPUs where we explicitly type cast floating
point values to booleans. This is only needed for Catalina systems.

* include/GLSLANG/ShaderLang.h:
* include/platform/FeaturesMtl.h:
* src/compiler/translator/TranslatorMetalDirect.cpp:
(sh::TranslatorMetalDirect::translateImpl):
* src/compiler/translator/TranslatorMetalDirect/AddExplicitTypeCasts.cpp:
(sh::Rewriter::Rewriter):
(sh::AddExplicitTypeCasts):
* src/compiler/translator/TranslatorMetalDirect/AddExplicitTypeCasts.h:
* src/compiler/translator/TranslatorMetalDirect/AstHelpers.cpp:
(sh::SubVector):
(sh::CoerceSimple):
* src/compiler/translator/TranslatorMetalDirect/AstHelpers.h:
* src/libANGLE/renderer/metal/DisplayMtl.mm:
(rx::DisplayMtl::initializeFeatures):
* src/libANGLE/renderer/metal/ShaderMtl.mm:
(rx::ShaderMtl::compile):

Canonical link: https://commits.webkit.org/236409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275841 268f45cc-cd09-0410-ab3c-d52691b4dbfc